# tauri-overview-

./: .env.example  .gitignore  AGENTS.md  drizzle.config.ts  eslint.config.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
drizzle/: 0000_init.sql  0001_add_email_unique.sql
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: AppError.ts  CreateItemInput.ts  IpcResponse.ts  Item.ts  UpdateItemInput.ts
src-tauri/migrations/: 20240101000000_init.sql  20250102000000_add_item_fields.sql
src-tauri/src/: env.rs  error.rs  lib.rs  tracing_setup.rs
src-tauri/src/commands/: backup.rs  clients.rs  database.rs  mod.rs
src-tauri/src/config/: app.rs  database.rs
src-tauri/src/core/: error.rs  mod.rs  pagination.rs  permissions.rs  response.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/core_domain/items/: commands.rs  repository.rs
src-tauri/src/modules/core_domain/items/domain/: entities.rs  errors.rs  image_utils.rs  mod.rs  rules.rs  value_objects.rs
src-tauri/src/modules/core_domain/items/services/: create_item.rs  delete_item.rs  mod.rs  update_item.rs
src-tauri/src/modules/identity/: mod.rs
src-tauri/src/modules/identity/authorization/: mod.rs
src-tauri/src/modules/identity/users/: commands.rs  mod.rs  repository.rs
src-tauri/src/modules/integrations/external_services/: mod.rs
src-tauri/src/modules/operations/: mod.rs
src-tauri/src/modules/operations/backup/: commands.rs
src-tauri/src/modules/operations/orders/: commands.rs  repository.rs
(+178 files in other folders)
