[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["default"] }
tauri-plugin-shell = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1", features = ["full"] }
ts-rs = { version = "10", features = ["serde-compat"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
base64 = "0.22"
tauri-plugin-dialog = "2.7.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
